syntax = "proto3";

message StartGame {
  int32 uid = 1;
}

message EndGame {
  int32 uid = 1;
}

message GetReplay {
  int32 uid = 1;
}